--- a/config.json
+++ b/config.json
@@ -6,5 +6,6 @@
     "admin_email": "contact@galaxyconseils.com",
     "admin_email_password": "Livre1234@",
     "last_user_id": 2,
-    "last_report_id": 1
+    "last_record_id": 1,
+    "last_file_id": 0
 }
