Ended files management

--- a/config.json
+++ b/config.json
@@ -7,5 +7,6 @@
     "admin_email_password": "Livre1234@",
     "last_user_id": 4,
     "last_record_id": 3,
-    "last_file_id": 0
+    "last_file_id": 4,
+    "last_post_id": 14
 }
